DesafioPricing/force-app/main/default/objects/Order/fields/AccountAddress__c.field-meta.xml
<CustomField>
    <fullName>AccountAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para endereço.</description>
    <label>AccountAddress</label>
    <referenceTo>AccountAdd__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>