DesafioPricing/force-app/main/default/objects/Order/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Condição de pagamento.</description>
    <label>PaymentCondition</label>
    <referenceTo>PaymentCondition__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>