DesafioPricing/force-app/main/default/objects/Order/validationRules/Bloquear_Alteracao_Conta_Pedido.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_Alteracao_Conta_Pedido</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(AccountId) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Não é possível atualizar a conta do pedido.</errorMessage>
</ValidationRule>